--- a/src/styles/pages/contact_vacation_productsPage.scss
+++ b/src/styles/pages/contact_vacation_productsPage.scss
@@ -1103,10 +1103,25 @@
             width: 100%;
             margin-top: 12px;
             height: auto;
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-start;
             gap: 36px;
             position: relative;
+            .infinite-scroll-component__outerdiv {
+              width: 100%;
+              .infinite-scroll-component  {
+                width: 100%;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                gap: 24px;
+                &::-webkit-scrollbar {
+                  display: none;
+                }
+              }
+            
+            }
             .loader-container {
               position: absolute;
               top: -260px;
