--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1351,3 +1351,14 @@ $border-top-color_1: rgb(57, 190, 57);
 .homepage-wrapper .homepage .hero-wrapper .hero .filter {
   z-index: 0 !important;
 }
+
+.blog-inner-page-wrapper .inner-page-blog .descriptions {
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 36px;
+  }
+  p, span, strong, li, ul, ol {
+    color: #191c1f;
+    font-size: 20px;
+    line-height: 32px;
+  }
+}
