--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,7 +39,13 @@
     }
   }
 }
-
+.css-1sazv7p-MuiStack-root {
+  margin-top: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
 .delivery-page-wrapper
   .deliverypage
   .container-delivery
