--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,13 @@
 //include mulish
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
 
+.css-1ov46kg {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 100% !important;
+  margin-top: 120px !important;
+}
 
 .css-1sazv7p-MuiStack-root {
   margin-top: 150px;
