--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1585,3 +1585,11 @@ $border-top-color_1: rgb(57, 190, 57);
     transform: scale(0.99);
   }
 }
+.app .catalog-toggle-menu-overlay .toggle-catalog-menu .right-sub-categories-container .links-categories .other-links .inner-child-link {
+  text-wrap: nowrap;
+  font-size: 14px;
+}
+.app .catalog-toggle-menu-overlay .toggle-catalog-menu .main-categories span {
+  text-wrap: nowrap;
+  font-size: 16px;
+}
