--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,7 +20,23 @@
   justify-content: center;
   width: 100%;
 }
-
+.product-inner-page-wrapper .productinnerpage .product-showing-area .product-showing .product-section .details-section .title-and-description div {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 8px;
+  p, span, strong, b {
+    font-size: 13px;
+    line-height: normal;
+    letter-spacing: -0.5px;
+    font-weight: 500;
+    span {
+      font-size: 16px;
+      letter-spacing: -0.5px;
+    }
+  }
+}
 .product-inner-page-wrapper
   .productinnerpage
   .similiar-products
